alterando o valor do input text quando selecionada a opção Decodificar

--- a/html/index.html
+++ b/html/index.html
@@ -17,8 +17,11 @@
 
     <main>
         <form>
-            <label for="frase">Digite a mensagem que deseja criptografar:</label>
-            <input type="text" id="frase">
+            <div id="mensagemOculta">
+                <label for="frase">Digite a mensagem que deseja criptografar:</label>
+                <input type="text" id="frase">
+            </div>
+            
     
             <label for="cifra"><input type="checkbox" id="cifra" name="escolha">
             Cifra de Cesar</label>
