--- a/html/index.html
+++ b/html/index.html
@@ -23,10 +23,10 @@
             </div>
             
             <label for="opcoes">Escolha o tipo de codificação:</label>
-            <select name="opcoes" id="opcoes">
-                <option value=""></option>
-                <option value="Cifra de Cesar" id="cifra">Cifra de Cesar</option>
-                <option value="Base 64" id="base64">Base 64</option>
+            <select name="opcoes" id="opcoes" onchange="escolher()">
+                <option value="Escolha">Escolha o tipo de criptografia:</option>
+                <option value="Cifra de Cesar">Cifra de Cesar</option>
+                <option value="Base 64">Base 64</option>
             </select>
     
             <div id="incrementando"></div> <!-- Lugar onde vai aparecer input para o incremento-->
