--- a/html/index.html
+++ b/html/index.html
@@ -23,7 +23,7 @@
             </div>
             
             <label for="opcoes">Escolha o tipo de codificação:</label>
-            <select name="opcoes" id="opcoes" onchange="escolher()">
+            <select name="opcoes" id="opcoes">
                 <option value="Escolha">Escolha o tipo de criptografia:</option>
                 <option value="Cifra de Cesar">Cifra de Cesar</option>
                 <option value="Base 64">Base 64</option>
