criei a função da base 64

--- a/html/index.html
+++ b/html/index.html
@@ -24,9 +24,9 @@
             
             <label for="opcoes">Escolha o tipo de codificação:</label>
             <select name="opcoes" id="opcoes">
-                <option value="Escolha">Escolha o tipo de criptografia:</option>
-                <option value="Cifra de Cesar">Cifra de Cesar</option>
-                <option value="Base 64">Base 64</option>
+                <option value="0">Escolha o tipo de criptografia:</option>
+                <option value="1">Cifra de Cesar</option>
+                <option value="2">Base 64</option>
             </select>
     
             <div id="incrementando"></div> <!-- Lugar onde vai aparecer input para o incremento-->
