troquei a fonte do site todo

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <script src="./js/index.js" defer></script>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -31,9 +34,9 @@
 
                 <div id="incrementando"></div> <!-- Lugar onde vai aparecer input para o incremento-->
             </section>
-            <section>
-                <label for="cod"><input type="radio" id="cod" name="escolha">Codificar</label>
-                <label for="decod"><input type="radio" id="decod" name="escolha">Decodificar</label>
+            <section class="radios">
+                <label for="cod"><input type="radio" id="cod" name="escolha"> Codificar</label>
+                <label for="decod"><input type="radio" id="decod" name="escolha"> Decodificar</label>
                 <div id="mensagem"></div>
             </section>
     
